<resources>
    <string name="app_name">Proiect-Tocilarii_Betivani</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_acounts">All accounts</string>
    <string name="menu_credit_accounts">Credit accounts</string>
    <string name="menu_deposit_accounts">Deposit accounts</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_feedback">Help others</string>
    <string name="menu_acounts">Acounts</string>
    <string name="menu_Feedback">Statistics</string>
    <string name="lv_row_account_type">Account Type</string>
    <string name="lv_row_iban">IBAN</string>
    <string name="lv_row_date">Date</string>
    <string name="lv_row_balance">Balance</string>
    <string name="lv_row_bankName">Bank name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_accounts">Your Accounts</string>
    <string name="lv_row_empty">-</string>
    <string name="loan_calculator">Loan calculator</string>
    <string name="calculate_loan">Calculate loan</string>
    <string name="grafx_credit_rate">Credit rate</string>
    <string name="grafix_deposit_rate">Deposit rate</string>
    <string name="calculator_select_your_bank">Select your bank</string>
    <string name="calculator_select_your_account_type">Select your account type</string>
    <string name="calculator_credit_account">Credit account</string>
    <string name="calculator_deposit_account">Deposit account</string>
    <string name="calculator_amount">Amount</string>
    <string name="calculator_period">Period(months)</string>
    <string name="calculator_calculate">Calculate</string>
    <string name="calculator_conclusion">Conclusion</string>
    <string name="calculator_monthly">Monthly</string>
    <string name="calculator_yearly">Yearly</string>
    <string name="calculator_total">Total</string>

    <string name="toaster_invalid_amount">Please insert a valid amount (minimum %1$.2f)</string>
    <string name="toaster_noBank">Please select a bank for your account</string>
    <string name="toaster_invalid_period">Please insert a valid period(integer numbers, minimum %1$.0f)</string>

    <string name="save_settings">Save settings</string>
    <string name="settings_choose_background_color">Choose background color</string>
    <string name="settings_choose_dark_or_white_mode">Choose theme</string>
    <string name="settings">Settings</string>
    <string name="Settings">General settings</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_credit_limit">Credit limit</string>

    <string name="holder_credit_label">Holder:</string>
    <string name="iban_credit_label">IBAN:</string>
    <string name="balance_credit_label">Balance:</string>
    <string name="credit_rate_credit_label">Credit rate:</string>
    <string name="created_on_credit_label">Created on:</string>
    <string name="period_credit_label">Period (months):</string>
    <string name="pay_credit_label">To be payed:</string>
    <string name="amount_credit_label">Amount</string>
    <string name="credit_credit_label">Bank:</string>
    <string name="deposit_type">Bank:</string>
    <string name="deposit_0">0</string>
    <string name="deposit_rate_label">Deposit rate:</string>
    <string name="deposit_message">Your progress to your goal</string>
    <string name="deposit_balance">Balance:</string>

    <string name="deposit_balance_param">Balance: %1$.0f</string>
    <string name="deposit_profit_param">Your monthly loan: %1$.0f</string>
    <string name="menu_deposit_add">Add account</string>
    <string name="add_add_new_account">Add new account</string>
    <string name="add_holder_name">Holder name</string>
    <string name="add_bank">Bank</string>
    <string name="add_iban">IBAN</string>
    <string name="add_rate">Rate</string>
    <string name="add_create_date_dd_mm_yyyy">Create date(dd/MM/yyyy)</string>
    <string name="add_period_months">Period(months)</string>
    <string name="add_balance">Balance</string>
    <string name="add_credit">Credit</string>
    <string name="add_deposit">Deposit</string>
    <string name="add_add_account">Add account</string>
    <string name="credit_pay">Pay</string>
    <string name="toast_add_added">Account added</string>
    <string name="toast_add_invalid_holder">Please enter holder name</string>
    <string name="toaster_add_invalid_bank">Please enter bank</string>
    <string name="toaster_add_invalid_iban">Please enter IBAN</string>
    <string name="toaster_add_no_rate">Please enter valid rate</string>
    <string name="toaster_add_invalid_rate">Please enter valid rate</string>
    <string name="toaster_no_invalid_date">Please enter the create date</string>
    <string name="toaster_add_invalid_date">Please enter a valid date</string>
    <string name="toaster_add_no_period">Please enter valid period</string>
    <string name="toaster_add_no_balance">Please enter valid balance</string>
    <string name="toaster_add_invalid_balance">Please enter valid balance</string>
    <string name="toast_setings_saved">Your settings were saved</string>
    <string name="toaster_login_default">The default password is 0000</string>
    <string name="toaster_login_incorect">Incorrect password!</string>
    <string name="head_app_name">CalculWise</string>
    <string name="head_app_team">by Tocilarii Betivani</string>
</resources>