<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- adaugati <item> pentru fiecare optiune pe care o
        doriti in meniul lateral-->
        <item android:title="@string/menu_acounts">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_item_AllAcounts"
                        android:icon="@drawable/icon_menu_all_accounts"
                        android:title="@string/menu_all_acounts"
                        />
                    <item
                        android:id="@+id/menu_item_CreditAcounts"
                        android:icon="@drawable/icon_menu_credit_accounts"
                        android:title="@string/menu_credit_accounts" />
                    <item
                        android:id="@+id/menu_item_DepositAccounts"
                        android:icon="@drawable/icon_menu_deposit_accounts"
                        android:title="@string/menu_deposit_accounts" />
                </group>
            </menu>
        </item>

        <item android:title="@string/menu_Feedback">
            <menu >
                <group>
                    <item
                        android:id="@+id/menu_item_Statistics"
                        android:icon="@drawable/icon_menu_statistics"
                        android:title="@string/menu_statistics" />
                </group>
            </menu>
        </item>
        <item android:title="@string/loan_calculator">
            <menu >
                <group>
                    <item
                        android:id="@+id/menu_item_Calculate"
                        android:icon="@drawable/icon_menu_calculator_black"
                        android:title="@string/calculate_loan" />
                </group>
            </menu>
        </item>
    </group>
</menu>