<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.FragmentCredit"
        android:id="@+id/fragment_credit"
        >

        <TextView
            android:id="@+id/add_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_add_new_account"
            android:textSize="24dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/kelly_slab_regular"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata_medium"
                android:hint="@string/add_holder_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_bank_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata_medium"
                android:hint="@string/add_bank" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_iban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_bank">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_iban_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata_medium"
                android:hint="@string/add_iban" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_iban">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_rate_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata_medium"
                android:hint="@string/add_rate"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_rate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_create_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_create_date_dd_mm_yyyy"
                android:fontFamily="@font/inconsolata_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_period_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata_medium"
                android:inputType="number"
                android:hint="@string/add_period_months" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_period">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_balance_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_balance"
                android:fontFamily="@font/inconsolata_medium"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_balance"
            android:orientation="horizontal"
            android:checkedButton="@+id/add_type_credit">

            <RadioButton
                android:id="@+id/add_type_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/inconsolata_medium"
                android:text="@string/add_credit" />

            <RadioButton
                android:id="@+id/add_type_deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/inconsolata_medium"
                android:text="@string/add_deposit" />
        </RadioGroup>

        <Button
            android:id="@+id/add_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_add_account"
            android:textSize="20dp"
            android:fontFamily="@font/kelly_slab_regular"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_type"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>

